...
            android:text="Niciun produs favorit"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swiperefresh1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ListView
            android:id="@+id/list"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:divider="@color/transparent"
            android:dividerHeight="15dp">

...
